Commit du 16/11/2025: - Ajout authentification et generation JWT - Creation de compte - MAJ filterchain - Mise a jours des CORS - Création gestion des erreurs de login.Si 3 erreurs de login consécutif alors blocage de 5 min